设置所有项目的parent为cuckoo-parent

--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,6 @@
     <module>cuckoo-order</module>
     <module>cuckoo-admin</module>
     <module>cuckoo-open-api</module>
+    <module>cuckoo-parent</module>
   </modules>
 </project>
