--- a/cuckoo-admin/pom.xml
+++ b/cuckoo-admin/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>cuckoo-parent</artifactId>
-    <groupId>com.lorelib.emall</groupId>
+    <groupId>com.lorelib.cuckoo</groupId>
     <version>1.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.lorelib.emall</groupId>
+  <groupId>com.lorelib.cuckoo</groupId>
   <artifactId>cuckoo-admin</artifactId>
 
 
