--- a/cuckoo-commons/pom.xml
+++ b/cuckoo-commons/pom.xml
@@ -10,7 +10,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.lorelib.cuckoo</groupId>
-  <artifactId>cuckoo-open-api</artifactId>
+  <artifactId>cuckoo-commons</artifactId>
 
-
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
+  </dependencies>
 </project>
