--- a/cuckoo-parent/pom.xml
+++ b/cuckoo-parent/pom.xml
@@ -10,7 +10,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.lorelib.emall</groupId>
+  <groupId>com.lorelib.cuckoo</groupId>
   <artifactId>cuckoo-parent</artifactId>
   <version>1.0</version>
   <packaging>pom</packaging>
@@ -460,40 +460,4 @@
       </plugin>
     </plugins>
   </build>
-
-  <repositories>
-    <repository>
-      <id>aliyun-repo</id>
-      <name>aliyun maven</name>
-      <url>http://maven.aliyun.com/nexus/content/repositories/central/</url>
-    </repository>
-    <repository>
-      <id>aliyun-repo2</id>
-      <name>aliyun maven2</name>
-      <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-    </repository>
-    <repository>
-      <id>mvn-repo2</id>
-      <name>Human Readable Name for this Mirror.</name>
-      <url>http://repo2.maven.org/maven2/</url>
-    </repository>
-  </repositories>
-
-  <pluginRepositories>
-    <pluginRepository>
-      <id>aliyun-repo</id>
-      <name>aliyun maven</name>
-      <url>http://maven.aliyun.com/nexus/content/repositories/central/</url>
-    </pluginRepository>
-    <pluginRepository>
-      <id>aliyun-repo2</id>
-      <name>aliyun maven2</name>
-      <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-    </pluginRepository>
-    <pluginRepository>
-      <id>mvn-repo2</id>
-      <name>Human Readable Name for this Mirror.</name>
-      <url>http://repo2.maven.org/maven2/</url>
-    </pluginRepository>
-  </pluginRepositories>
 </project>
