--- a/cuckoo-service-order/cuckoo-order-service/pom.xml
+++ b/cuckoo-service-order/cuckoo-order-service/pom.xml
@@ -3,14 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>cuckoo-parent</artifactId>
+    <artifactId>cuckoo-service-order</artifactId>
     <groupId>com.lorelib.cuckoo</groupId>
     <version>1.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.lorelib.cuckoo</groupId>
-  <artifactId>cuckoo-open-api</artifactId>
+  <artifactId>cuckoo-order-service</artifactId>
 
 
 </project>
