--- a/cuckoo-service-user/cuckoo-user-facade/pom.xml
+++ b/cuckoo-service-user/cuckoo-user-facade/pom.xml
@@ -3,14 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>cuckoo-parent</artifactId>
-    <groupId>com.lorelib.emall</groupId>
+    <artifactId>cuckoo-service-user</artifactId>
+    <groupId>com.lorelib.cuckoo</groupId>
     <version>1.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.lorelib.emall</groupId>
-  <artifactId>cuckoo-order</artifactId>
+  <groupId>com.lorelib.cuckoo</groupId>
+  <artifactId>cuckoo-user-facade</artifactId>
 
-
+  <dependencies>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+  </dependencies>
 </project>
