--- a/cuckoo-framework/pom.xml
+++ b/cuckoo-framework/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>cuckoo</artifactId>
+    <artifactId>cuckoo-parent</artifactId>
     <groupId>com.lorelib.cuckoo</groupId>
     <version>1.0</version>
   </parent>
@@ -11,6 +11,9 @@
 
   <groupId>com.lorelib.cuckoo</groupId>
   <artifactId>cuckoo-framework</artifactId>
+  <packaging>pom</packaging>
 
-
+  <modules>
+    <module>cuckoo-framework-test</module>
+  </modules>
 </project>
