添加Bean转换工具

--- a/cuckoo-commons/pom.xml
+++ b/cuckoo-commons/pom.xml
@@ -25,5 +25,13 @@
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.dozer</groupId>
+      <artifactId>dozer</artifactId>
+    </dependency>
   </dependencies>
 </project>
