--- a/cuckoo-framework/cuckoo-framework-core/pom.xml
+++ b/cuckoo-framework/cuckoo-framework-core/pom.xml
@@ -3,18 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>cuckoo-parent</artifactId>
+    <artifactId>cuckoo-framework</artifactId>
     <groupId>com.lorelib.cuckoo</groupId>
     <version>1.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.lorelib.cuckoo</groupId>
-  <artifactId>cuckoo-framework</artifactId>
-  <packaging>pom</packaging>
+  <artifactId>cuckoo-framework-core</artifactId>
 
-  <modules>
-    <module>cuckoo-framework-test</module>
-    <module>cuckoo-framework-core</module>
-  </modules>
+
 </project>
