--- a/cuckoo-service-order/cuckoo-order-service/pom.xml
+++ b/cuckoo-service-order/cuckoo-order-service/pom.xml
@@ -12,5 +12,32 @@
   <groupId>com.lorelib.cuckoo</groupId>
   <artifactId>cuckoo-order-service</artifactId>
 
-
+  <dependencies>
+    <dependency>
+      <groupId>com.lorelib.cuckoo</groupId>
+      <artifactId>cuckoo-order-facade</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.lorelib.cuckoo</groupId>
+      <artifactId>cuckoo-commons</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-boot-starter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+  </dependencies>
 </project>
