--- a/cuckoo-service-order/cuckoo-order-service/pom.xml
+++ b/cuckoo-service-order/cuckoo-order-service/pom.xml
@@ -15,6 +15,16 @@
   <dependencies>
     <dependency>
       <groupId>com.lorelib.cuckoo</groupId>
+      <artifactId>cuckoo-user-facade</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.lorelib.cuckoo</groupId>
+      <artifactId>cuckoo-user-service</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.lorelib.cuckoo</groupId>
       <artifactId>cuckoo-order-facade</artifactId>
       <version>${project.version}</version>
     </dependency>
