springboot默认不扫描jar包里面文件，需加上注解ComponentScan； 配置数据库，暂未找到将配置放入config-server

--- a/cuckoo-service-zstarter/pom.xml
+++ b/cuckoo-service-zstarter/pom.xml
@@ -14,6 +14,14 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.lorelib.cuckoo</groupId>
       <artifactId>cuckoo-user-service</artifactId>
       <version>${project.version}</version>
