--- a/cuckoo-framework/cuckoo-framework-core/pom.xml
+++ b/cuckoo-framework/cuckoo-framework-core/pom.xml
@@ -17,5 +17,13 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-annotations</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+    </dependency>
   </dependencies>
 </project>
